# StaffDemo

./: CMakeLists.txt  README.md
data/: data.txt
include/: Employee.h  Engineer.h  Factory.h  Interfaces.h  Personal.h  Project.h
src/: Employee.cpp  Engineer.cpp  Factory.cpp  Personal.cpp  Project.cpp  main.cpp
